revista-styles.css
/* ... */
.more-articles-button.et_pb_row + .side-card-columns.et_pb_row {
    margin-top: 70px;
}

.more-articles-button.et_pb_row + .side-card-columns.et_pb_row::before {
    content: '';
    width: 100%;
    height: 1px;
    display: block;
    background: #BAC5C6;
    position: absolute;
    top: -70px;
}

/* IMAGE CARDS */

.side-card-columns.et_clickable .et_pb_image_wrap,
.image-card.et_clickable .et_pb_image_wrap {
    max-width: 100%;
    overflow: hidden;
}

.side-card-columns h3 {
    font-size: 1.9em;
}

.image-card h3 {
    font-size: 1.3em;
    line-height: 1.2;
}
.image-card .et_pb_main_blurb_image {
    margin-bottom: 10px;
}

/* .side-card-columns.et_clickable .et_pb_image_wrap img,
.image-card.et_clickable  .et_pb_image_wrap img {
    transition-duration: .5s;
} */

/* .side-card-columns.et_clickable:hover .et_pb_image_wrap img,
.image-card.et_clickable:hover .et_pb_image_wrap img {
    transform: scale(1.1);
} */

.image-card .et_pb_blurb_description h2 {
    font-size: 1.5em;
    line-height: 1.2em;
}

/* .side-card-columns.et_clickable,
.image-card.et_clickable,
.et_pb_text.et_clickable .et_pb_text_inner {
    transition-duration: .5s;
} */

.et_pb_text.et_clickable .et_pb_text_inner {
    /* display: inline-block; */
    padding: 5px 0px;
}

.editor-letter.et_clickable:hover h3,
.image-card.et_clickable:hover h2,
.image-card.et_clickable:hover h3,
.image-card.et_clickable:hover h4 {
    text-decoration: underline;
}

.image-card .et_pb_blurb_container {
    padding: 5px 0px;
}

/* .issue_hero .et_pb_module.et_pb_text p:first-child:first-of-type,*/
.side-card-columns .et_pb_text p:first-of-type,
.image-card .et_pb_blurb_description p:nth-last-of-type(2),
.two-columns_hero .et_pb_blurb_description p:first-child:first-of-type,
.issue_hero .et_pb_blurb_description p:first-child:first-of-type { 
    margin-bottom: .5em;
}
/*.issue_hero .et_pb_text p:first-child:first-of-type, */
.two-columns_hero .et_pb_blurb_description p:first-child:first-of-type,
.issue_hero .et_pb_blurb_description p:first-child:first-of-type,
.side-card-columns .et_pb_text p:first-child:first-of-type,
.image-card .et_pb_blurb_description p:nth-last-of-type(2) {
    font-family: 'Montserrat' !important;
    color: #A51C30;
    font-weight: 800;
    font-size: .85em;
    text-transform: uppercase;
}

/* .issue_hero .et_pb_text p:first-child:first-of-type, */
.side-card-columns .et_pb_text p:first-child:first-of-type,
.two-columns_hero .et_pb_blurb_description p:first-child:first-of-type,
.issue_hero .et_pb_blurb_description p:first-child:first-of-type {
    color: #fff;
}


.side-card-columns .et_pb_text h2~p:first-of-type,
.image-card .et_pb_blurb_description h2~p:first-of-type {
    font-weight: 400;
    text-transform: none;
}

.et_pb_extra_module .post-meta,
.page .post-wrap .image-card .et_pb_blurb_description h2 a {
    color: #000 !important;
}

.image-card .et_pb_blurb_content {
    text-align: left;
}

.main-hero h2.et_pb_slide_title {
    font-size: 2.75em;
}

.main-hero .et_pb_slide_content p {
    font-size: 1.7em;
}

/* Left Image cards */

.et_pb_blurb_position_left .et_pb_main_blurb_image {
    width: 30%;
    padding-right: 2%
}


/* TEXT BAND */
.page-text-hero {
    padding: 0px 20px 40px 45px;
}

/* ARTICLE TABS*/
.et_pb_tab {
    padding: 24px 0px 0px 0px;
}
.et_pb_tabs {
    border: none;
    
}
.single-post h1 {
    font-size: 2.6em;
    padding-bottom: 1em;
}

ul.et_pb_tabs_controls {
    background: transparent;
}

.et_pb_tabs li.et_pb_tab_active a  {
    background: #A51C30;
}

.et_pb_pagebuilder_layout .et_pb_tab .et_pb_tab_content a,
.et_pb_pagebuilder_layout .et_pb_tab .et_pb_tab_content a:visited,
.post-content a,
.et_pb_pagebuilder_layout .et_pb_text a {
    color: #A51C30;
}

.et_pb_tabs li a {
    background: #f3f3f1;
}

.et_pb_tabs li.et_pb_tab_active a {
    color: #fff !important;
}

/*ARTICLE FONTS*/

.dcsbcm_divi_breadcrumbs_wrapper {
    margin-bottom: 0px !important;
}

.dcsbcm_divi_breadcrumb {
    color: #A51C30
}


.post-template-default article .article-breadcrumbs-season-header .dcsbcm_divi_breadcrumb {
  font-size: 1rem;
}

.post-template-default article .article-breadcrumbs-season-header,
.post-template-default article .et_pb_tabs_controls,
.post-template-default article .main-section-header h2,
.post-template-default article .et_pb_blog_grid,
.post-template-default article .et_pb_blog_grid h3,
.post-template-default article .et_pb_blog_grid h2,
.post-template-default article .et_pb_blog_grid h3 a,
.post-template-default article .et_pb_blog_grid h2 a,
.post-template-default article .et_pb_blog_grid .post-content {
    font-family: 'Montserrat' !important;
}

.post-template-default article,
.post-template-default article h1,
.post-template-default article h2,
.post-template-default article h3,
.post-template-default article h4,
.post-template-default article h5,
.post-template-default article h6, 
.post-template-default article h1 a,
.post-template-default article h2 a,
.post-template-default article h3 a,
.post-template-default article h4 a,
.post-template-default article h5 a,
.post-template-default article h6 a,
.post-template-default article .wp-caption p.wp-caption-text,
.post-template-default article .paragraph .et_pb_text_inner {
    font-family: 'Spectral', serif !important;
}

.post-template-default article p {
    font-size: 1.1em;
}

.post-template-default article .et_pb_blog_grid p {
    font-size: 18px;
}


body.post-template-default .et_pb_blog_grid .entry-featured-image-url {
    max-height: 218px;
}

/* SIDE MENU */

.side-menu ul {
    list-style: none;
    border-left: 5px solid #d5dce1;
    padding: .2em 0 .3em 0;
    line-height: 1.4em;
}

.side-menu ul ul {
    list-style: none;
    border-left: none;
    padding: 0;
}

.side-menu ul li {
    font-size: .9em;
}

.side-menu ul li {
    padding: 3px 0 8px 12px;
    margin-bottom: 0;
}

.side-menu ul li {
    font-weight: 700;
}

.side-menu ul li a {
    color: #000;
}
/* ... */

